[gd_scene load_steps=37 format=3 uid="uid://bd6dm2obp4315"]

[ext_resource type="Script" path="res://Minigames/MG_Maze/canvas_layer.gd" id="1_m2oi0"]
[ext_resource type="Script" path="res://Minigames/lifes.gd" id="2_7s6ma"]
[ext_resource type="PackedScene" uid="uid://bbcp8hmccldcb" path="res://player/life.tscn" id="3_adlt4"]
[ext_resource type="Texture2D" uid="uid://lvxf4foerjx6" path="res://asset/Axe.png" id="4_tx3hk"]
[ext_resource type="Texture2D" uid="uid://se2sekm150yk" path="res://asset/apar.png" id="5_7amyw"]
[ext_resource type="Texture2D" uid="uid://cic1cd7yvd8ks" path="res://asset/MenuButton/Help_idle.png" id="5_c5l0v"]
[ext_resource type="Texture2D" uid="uid://bondab716kurs" path="res://asset/rescue.png" id="5_q3egy"]
[ext_resource type="Texture2D" uid="uid://cbamxnbsoaivk" path="res://asset/MenuButton/Help_pressed.png" id="6_mq8u8"]
[ext_resource type="Texture2D" uid="uid://cwsi81nu6qhne" path="res://asset/MenuButton/Back B.png" id="7_lgu37"]
[ext_resource type="Texture2D" uid="uid://d3j1ap1c1m6ew" path="res://asset/MenuButton/Back A.png" id="8_hu5mf"]
[ext_resource type="PackedScene" uid="uid://div6tgqs38lwg" path="res://Minigames/tutorial_ui.tscn" id="9_oesmf"]
[ext_resource type="Texture2D" uid="uid://r1dsbn0ctsi0" path="res://asset/Tutorial_Tile.png" id="12_qjawa"]
[ext_resource type="Texture2D" uid="uid://bcnkef8p4ap3y" path="res://asset/BtnIdle.png" id="13_bn7mt"]
[ext_resource type="Texture2D" uid="uid://b7g4q04cqaee6" path="res://asset/BtnMove.png" id="14_iu163"]
[ext_resource type="Texture2D" uid="uid://dwrl07dhuglvt" path="res://asset/MenuButton/Retry A.png" id="15_c8hjo"]
[ext_resource type="Texture2D" uid="uid://cbwnmjxrj2nkg" path="res://asset/BtnIdleL.png" id="15_vv22b"]
[ext_resource type="Texture2D" uid="uid://46mdx7n2c8wk" path="res://asset/MenuButton/Retry B.png" id="16_g2303"]
[ext_resource type="Texture2D" uid="uid://lob30j6425w3" path="res://asset/BtnMoveL.png" id="16_y74fi"]
[ext_resource type="Texture2D" uid="uid://bgx38m1hnoq5b" path="res://asset/MenuButton/Pause.png" id="17_84o3c"]
[ext_resource type="Texture2D" uid="uid://nqhfn73n2vre" path="res://asset/fire_sprite.png" id="17_ujdcy"]
[ext_resource type="Texture2D" uid="uid://boosvlaqfye44" path="res://asset/MenuButton/Pause2.png" id="18_vgvvl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nasy0"]
size = Vector2(125, 125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k2mxv"]
size = Vector2(125, 125)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_02fsl"]
texture = ExtResource("12_qjawa")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
5:1/0 = 0
4:1/0 = 0
0:1/animation_columns = 4
0:1/animation_speed = 4.0
0:1/animation_frame_0/duration = 10.0
0:1/animation_frame_1/duration = 1.0
0:1/animation_frame_2/duration = 1.0
0:1/animation_frame_3/duration = 1.0
0:1/0 = 0
0:2/size_in_atlas = Vector2i(2, 1)
0:2/animation_columns = 4
0:2/animation_speed = 4.0
0:2/animation_frame_0/duration = 3.0
0:2/animation_frame_1/duration = 1.0
0:2/animation_frame_2/duration = 1.0
0:2/animation_frame_3/duration = 1.0
0:2/0 = 0
0:3/size_in_atlas = Vector2i(2, 1)
0:3/animation_columns = 4
0:3/animation_speed = 4.0
0:3/animation_frame_0/duration = 3.0
0:3/animation_frame_1/duration = 1.0
0:3/animation_frame_2/duration = 1.0
0:3/animation_frame_3/duration = 1.0
0:3/0 = 0
0:4/size_in_atlas = Vector2i(2, 1)
0:4/animation_columns = 4
0:4/animation_speed = 4.0
0:4/animation_frame_0/duration = 3.0
0:4/animation_frame_1/duration = 1.0
0:4/animation_frame_2/duration = 1.0
0:4/animation_frame_3/duration = 1.0
0:4/0 = 0
0:5/size_in_atlas = Vector2i(2, 1)
0:5/animation_columns = 4
0:5/animation_speed = 4.0
0:5/animation_frame_0/duration = 3.0
0:5/animation_frame_1/duration = 1.0
0:5/animation_frame_2/duration = 1.0
0:5/animation_frame_3/duration = 1.0
0:5/0 = 0
6:0/0 = 0
6:1/0 = 0

[sub_resource type="TileSet" id="TileSet_vyduu"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_02fsl")

[sub_resource type="AtlasTexture" id="AtlasTexture_cfort"]
atlas = ExtResource("17_ujdcy")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjt36"]
atlas = ExtResource("17_ujdcy")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw3mg"]
atlas = ExtResource("17_ujdcy")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4ema"]
atlas = ExtResource("17_ujdcy")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_82j7v"]
atlas = ExtResource("17_ujdcy")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1133i"]
atlas = ExtResource("17_ujdcy")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bjrr"]
atlas = ExtResource("17_ujdcy")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1afq8"]
atlas = ExtResource("17_ujdcy")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2l7n"]
atlas = ExtResource("17_ujdcy")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywkxs"]
atlas = ExtResource("17_ujdcy")
region = Rect2(160, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_prmnn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfort")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjt36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw3mg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4ema")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82j7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1133i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bjrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1afq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2l7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywkxs")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 5
script = ExtResource("1_m2oi0")

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -28.0
offset_bottom = -28.0
grow_vertical = 0
scale = Vector2(0.67, 0.67)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="tc_button_right" type="TouchScreenButton" parent="Control2"]
modulate = Color(1, 1, 1, 0.533333)
position = Vector2(193, -155.448)
scale = Vector2(0.67, 0.67)
texture_normal = ExtResource("13_bn7mt")
texture_pressed = ExtResource("14_iu163")
shape = SubResource("RectangleShape2D_nasy0")
action = "ui_right"

[node name="tc_button_left" type="TouchScreenButton" parent="Control2"]
modulate = Color(1, 1, 1, 0.533333)
position = Vector2(23, -155.448)
scale = Vector2(0.67, 0.67)
texture_normal = ExtResource("15_vv22b")
texture_pressed = ExtResource("16_y74fi")
shape = SubResource("RectangleShape2D_k2mxv")
action = "ui_left"

[node name="tc_button_down" type="TouchScreenButton" parent="Control2"]
modulate = Color(1, 1, 1, 0.533333)
position = Vector2(195, -70.4478)
rotation = 1.5708
scale = Vector2(0.67, 0.67)
texture_normal = ExtResource("13_bn7mt")
texture_pressed = ExtResource("14_iu163")
shape = SubResource("RectangleShape2D_nasy0")
action = "ui_down"

[node name="tc_button_up" type="TouchScreenButton" parent="Control2"]
modulate = Color(1, 1, 1, 0.533333)
position = Vector2(195, -240.448)
rotation = 1.5708
scale = Vector2(0.67, 0.67)
texture_normal = ExtResource("15_vv22b")
texture_pressed = ExtResource("16_y74fi")
shape = SubResource("RectangleShape2D_k2mxv")
action = "ui_up"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1155.0
offset_bottom = 96.0
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Control"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 0
offset_right = 1163.0
offset_bottom = 100.0
color = Color(0, 0, 0, 0.490196)

[node name="scoretext" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.566233
anchor_top = 0.46875
anchor_right = 0.566233
anchor_bottom = 0.46875
offset_left = 133.0
offset_top = -29.0
offset_right = 351.0
offset_bottom = 26.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Score: 00"
metadata/_edit_use_anchors_ = true

[node name="Success" type="Label" parent="Control"]
visible = false
modulate = Color(0.0156863, 1, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = 248.5
offset_right = 107.5
offset_bottom = 303.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Success"
horizontal_alignment = 1

[node name="times" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -27.5
offset_right = 61.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "0:00"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="Control"]
autostart = true

[node name="lifes" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -173.5
offset_top = 49.0
offset_right = -173.5
offset_bottom = 49.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("2_7s6ma")

[node name="life3" parent="Control/lifes" instance=ExtResource("3_adlt4")]
position = Vector2(65, 0)

[node name="life2" parent="Control/lifes" instance=ExtResource("3_adlt4")]

[node name="life1" parent="Control/lifes" instance=ExtResource("3_adlt4")]
position = Vector2(-65, 0)

[node name="Apar" type="Node2D" parent="Control"]
position = Vector2(242, 45)

[node name="Apar" type="Sprite2D" parent="Control/Apar"]
texture = ExtResource("5_7amyw")

[node name="Num" type="Label" parent="Control/Apar"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -24.5
offset_right = 47.0
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rescue" type="Node2D" parent="Control"]
position = Vector2(484, 90)

[node name="Rescue" type="Sprite2D" parent="Control/Rescue"]
position = Vector2(73, -45)
texture = ExtResource("5_q3egy")

[node name="Num" type="Label" parent="Control/Rescue"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.5
offset_top = -98.5
offset_right = 396.5
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Axe" type="Node2D" parent="Control"]
position = Vector2(484, 90)

[node name="Axe" type="Sprite2D" parent="Control/Axe"]
position = Vector2(-352, -45)
texture = ExtResource("4_tx3hk")

[node name="Num" type="Label" parent="Control/Axe"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -316.0
offset_top = -69.5
offset_right = -293.0
offset_bottom = -14.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AddScore" type="Label" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 362.5
offset_top = -28.0
offset_right = 484.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "+100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Help" type="TextureButton" parent="."]
offset_left = 1070.0
offset_top = 10.0
offset_right = 1390.0
offset_bottom = 330.0
scale = Vector2(0.23, 0.23)
size_flags_horizontal = 0
texture_normal = ExtResource("5_c5l0v")
texture_pressed = ExtResource("6_mq8u8")
metadata/_edit_use_anchors_ = true

[node name="Back" type="TextureButton" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 330.0
offset_bottom = 330.0
scale = Vector2(0.23, 0.23)
size_flags_horizontal = 0
texture_normal = ExtResource("7_lgu37")
texture_pressed = ExtResource("8_hu5mf")
metadata/_edit_use_anchors_ = true

[node name="Retry" type="TextureButton" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 330.0
offset_bottom = 330.0
scale = Vector2(0.23, 0.23)
size_flags_horizontal = 0
texture_normal = ExtResource("15_c8hjo")
texture_pressed = ExtResource("16_g2303")
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 138.0
offset_bottom = 138.0
scale = Vector2(0.575, 0.575)
texture_normal = ExtResource("17_84o3c")
texture_pressed = ExtResource("18_vgvvl")

[node name="tutorial_ui" parent="." instance=ExtResource("9_oesmf")]
process_mode = 2
visible = false
position = Vector2(576, 324)

[node name="okay" type="Button" parent="tutorial_ui"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = 225.5
offset_right = 34.5
offset_bottom = 261.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Okay !"

[node name="Game Goal" type="Label" parent="tutorial_ui"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -464.5
offset_top = -284.0
offset_right = 464.5
offset_bottom = -194.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 17
text = "Minigame Rescue Maze
Selamatkan semua korban yang terperangkap di ruangan ini. Semua korban perlu diselamatkan
sebelum dapat mengakses jalan keluar."
horizontal_alignment = 1

[node name="TileMap" type="TileMap" parent="tutorial_ui"]
scale = Vector2(1.2, 1.2)
tile_set = SubResource("TileSet_vyduu")
format = 2
layer_0/tile_data = PackedInt32Array(-262156, 0, 0, -131084, 65536, 0, -12, 196608, 0, 131060, 131072, 0, 327668, 0, 1, -327679, 327680, 0, 65537, 393216, 1, 196609, 393216, 0, -262142, 262144, 0, -131071, 327680, 1, 327683, 0, 1342177282, 327685, 0, 3, 327687, 0, 268435460, 327689, 0, 1610612741)

[node name="Icon" type="AnimatedSprite2D" parent="tutorial_ui/TileMap"]
position = Vector2(80.5, -15)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_prmnn")
autoplay = "default"

[node name="list" type="MarginContainer" parent="tutorial_ui"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -405.0
offset_top = -201.0
offset_right = 496.0
offset_bottom = 227.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="tutorial_ui/list"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 20

[node name="Lantai" type="Label" parent="tutorial_ui/list/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 17
text = "Lantai
Pemain bisa berdiri dan berjalan diatas sini"
vertical_alignment = 1

[node name="Dinding" type="Label" parent="tutorial_ui/list/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 17
text = "Dinding
Penghalang dan pembatas game"
vertical_alignment = 1

[node name="Target" type="Label" parent="tutorial_ui/list/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 17
text = "Target / Korban Bencana
Korban yang terperangkap dan harus diselamatkan"
vertical_alignment = 1

[node name="Exit" type="Label" parent="tutorial_ui/list/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 17
text = "Jalan Keluar / Jalur Evakuasi
Pemain Perluelamatkan semua target sebelum 
dapat mengevakuasi gedung

"
vertical_alignment = 1

[node name="Lantai2" type="Label" parent="tutorial_ui/list/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 17
text = "Lantai retak
Setelah dipijak 1x, lantai akan runtuh dan 
menjadi lubang
"
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="tutorial_ui/list"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 34

[node name="Wood" type="Label" parent="tutorial_ui/list/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 17
text = "Kapak dan Penghalang Kayu 
Gunakan kapak untuk menghancurkan 
penghalang kayu agar pemain dapat lewat"
vertical_alignment = 1

[node name="Fire" type="Label" parent="tutorial_ui/list/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 17
text = "Api dan Pemadam Api
Gunakan pemadam untuk memadamkan api,
dan melindungi diri sindiri dari kebakaran"
vertical_alignment = 1

[node name="Box" type="Label" parent="tutorial_ui/list/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 17
text = "Kotak dan Platform
Kotak dapat didorong untuk membuka jalur,
atau bahkan bisa dijadikan platform
pijakan jika didorong
kedalam lubang. "
vertical_alignment = 1

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="timeout" from="Control/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="tutorial_ui/okay" to="." method="_on_okay_pressed"]
